--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            family = "Mehta",
            role = c("aut", "cre"),
            email = "avi.mehta@students.mq.edu.au")
-Description: This package will generate ASCII art of a whale with a unique whale-themed phrase to go with it.
+Description: This package will generate ASCII art of a whale with a unique whale-themed phrase to go with it. Yep.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
