--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     magrittr
+URL: https://github.com/avimehtamq/ohwhaley
+BugReports: https://github.com/avimehtamq/ohwhaley/issues
